--- a/ML/prediction_each_classification.ipynb
+++ b/ML/prediction_each_classification.ipynb
@@ -4208,6 +4208,668 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "ProductID",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "min_stock",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "max_stock",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mean_stock",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "min_stock_1_2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "max_stock_1_2",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "1357632f-62e0-4a3e-be5b-0ee7ccf3d205",
+       "rows": [
+        [
+         "0",
+         "5",
+         "6.0",
+         "7.0",
+         "7.0",
+         "5.0",
+         "8.0"
+        ],
+        [
+         "1",
+         "33",
+         "8.0",
+         "11.0",
+         "10.0",
+         "7.0",
+         "10.0"
+        ],
+        [
+         "2",
+         "45",
+         "1.0",
+         "3.0",
+         "1.0",
+         "1.0",
+         "1.0"
+        ],
+        [
+         "3",
+         "61",
+         "9.0",
+         "10.0",
+         "10.0",
+         "8.0",
+         "11.0"
+        ],
+        [
+         "4",
+         "66",
+         "8.0",
+         "9.0",
+         "9.0",
+         "6.0",
+         "9.0"
+        ],
+        [
+         "5",
+         "67",
+         "3.0",
+         "3.0",
+         "3.0",
+         "2.0",
+         "3.0"
+        ],
+        [
+         "6",
+         "107",
+         "0.0",
+         "0.0",
+         "0.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "7",
+         "111",
+         "5.0",
+         "6.0",
+         "6.0",
+         "4.0",
+         "6.0"
+        ],
+        [
+         "8",
+         "197",
+         "6.0",
+         "12.0",
+         "8.0",
+         "5.0",
+         "7.0"
+        ],
+        [
+         "9",
+         "200",
+         "5.0",
+         "11.0",
+         "7.0",
+         "4.0",
+         "6.0"
+        ],
+        [
+         "10",
+         "203",
+         "5.0",
+         "6.0",
+         "5.0",
+         "4.0",
+         "6.0"
+        ],
+        [
+         "11",
+         "210",
+         "7.0",
+         "7.0",
+         "7.0",
+         "6.0",
+         "8.0"
+        ],
+        [
+         "12",
+         "216",
+         "6.0",
+         "10.0",
+         "8.0",
+         "5.0",
+         "7.0"
+        ],
+        [
+         "13",
+         "271",
+         "0.0",
+         "5.0",
+         "3.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "14",
+         "299",
+         "2.0",
+         "2.0",
+         "2.0",
+         "2.0",
+         "3.0"
+        ],
+        [
+         "15",
+         "307",
+         "2.0",
+         "2.0",
+         "2.0",
+         "2.0",
+         "2.0"
+        ],
+        [
+         "16",
+         "309",
+         "10.0",
+         "10.0",
+         "10.0",
+         "8.0",
+         "12.0"
+        ],
+        [
+         "17",
+         "427",
+         "1.0",
+         "5.0",
+         "3.0",
+         "1.0",
+         "1.0"
+        ],
+        [
+         "18",
+         "470",
+         "7.0",
+         "15.0",
+         "9.0",
+         "6.0",
+         "8.0"
+        ],
+        [
+         "19",
+         "480",
+         "6.0",
+         "8.0",
+         "7.0",
+         "5.0",
+         "7.0"
+        ],
+        [
+         "20",
+         "599",
+         "29.0",
+         "32.0",
+         "30.0",
+         "23.0",
+         "34.0"
+        ],
+        [
+         "21",
+         "637",
+         "1.0",
+         "1.0",
+         "1.0",
+         "1.0",
+         "1.0"
+        ],
+        [
+         "22",
+         "639",
+         "0.0",
+         "1.0",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "23",
+         "640",
+         "1.0",
+         "1.0",
+         "1.0",
+         "1.0",
+         "2.0"
+        ],
+        [
+         "24",
+         "707",
+         "0.0",
+         "1.0",
+         "0.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "25",
+         "737",
+         "3.0",
+         "3.0",
+         "3.0",
+         "3.0",
+         "4.0"
+        ],
+        [
+         "26",
+         "741",
+         "2.0",
+         "3.0",
+         "2.0",
+         "2.0",
+         "3.0"
+        ],
+        [
+         "27",
+         "742",
+         "5.0",
+         "6.0",
+         "6.0",
+         "4.0",
+         "6.0"
+        ],
+        [
+         "28",
+         "766",
+         "5.0",
+         "5.0",
+         "5.0",
+         "4.0",
+         "6.0"
+        ],
+        [
+         "29",
+         "804",
+         "1.0",
+         "1.0",
+         "1.0",
+         "1.0",
+         "1.0"
+        ],
+        [
+         "30",
+         "808",
+         "6.0",
+         "6.0",
+         "6.0",
+         "5.0",
+         "7.0"
+        ],
+        [
+         "31",
+         "811",
+         "1.0",
+         "2.0",
+         "1.0",
+         "1.0",
+         "1.0"
+        ],
+        [
+         "32",
+         "815",
+         "1.0",
+         "1.0",
+         "1.0",
+         "1.0",
+         "2.0"
+        ],
+        [
+         "33",
+         "819",
+         "1.0",
+         "4.0",
+         "3.0",
+         "1.0",
+         "2.0"
+        ],
+        [
+         "34",
+         "825",
+         "4.0",
+         "4.0",
+         "4.0",
+         "3.0",
+         "5.0"
+        ],
+        [
+         "35",
+         "830",
+         "5.0",
+         "6.0",
+         "6.0",
+         "4.0",
+         "6.0"
+        ],
+        [
+         "36",
+         "836",
+         "3.0",
+         "4.0",
+         "4.0",
+         "2.0",
+         "3.0"
+        ],
+        [
+         "37",
+         "861",
+         "0.0",
+         "3.0",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "38",
+         "865",
+         "5.0",
+         "14.0",
+         "9.0",
+         "4.0",
+         "6.0"
+        ],
+        [
+         "39",
+         "889",
+         "4.0",
+         "4.0",
+         "4.0",
+         "3.0",
+         "5.0"
+        ],
+        [
+         "40",
+         "894",
+         "3.0",
+         "7.0",
+         "5.0",
+         "3.0",
+         "4.0"
+        ],
+        [
+         "41",
+         "906",
+         "0.0",
+         "1.0",
+         "0.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "42",
+         "911",
+         "3.0",
+         "5.0",
+         "4.0",
+         "2.0",
+         "3.0"
+        ],
+        [
+         "43",
+         "915",
+         "5.0",
+         "5.0",
+         "5.0",
+         "4.0",
+         "6.0"
+        ],
+        [
+         "44",
+         "916",
+         "5.0",
+         "5.0",
+         "5.0",
+         "4.0",
+         "6.0"
+        ],
+        [
+         "45",
+         "955",
+         "1.0",
+         "2.0",
+         "2.0",
+         "1.0",
+         "1.0"
+        ],
+        [
+         "46",
+         "957",
+         "3.0",
+         "8.0",
+         "5.0",
+         "2.0",
+         "3.0"
+        ],
+        [
+         "47",
+         "961",
+         "0.0",
+         "0.0",
+         "0.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "48",
+         "969",
+         "1.0",
+         "1.0",
+         "1.0",
+         "1.0",
+         "1.0"
+        ],
+        [
+         "49",
+         "975",
+         "5.0",
+         "5.0",
+         "5.0",
+         "4.0",
+         "6.0"
+        ]
+       ],
+       "shape": {
+        "columns": 6,
+        "rows": 87
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ProductID</th>\n",
+       "      <th>min_stock</th>\n",
+       "      <th>max_stock</th>\n",
+       "      <th>mean_stock</th>\n",
+       "      <th>min_stock_1_2</th>\n",
+       "      <th>max_stock_1_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>33</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>45</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>61</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>66</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>2087</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>2463</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>2464</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>2686</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>3464</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>87 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ProductID  min_stock  max_stock  mean_stock  min_stock_1_2  max_stock_1_2\n",
+       "0           5        6.0        7.0         7.0            5.0            8.0\n",
+       "1          33        8.0       11.0        10.0            7.0           10.0\n",
+       "2          45        1.0        3.0         1.0            1.0            1.0\n",
+       "3          61        9.0       10.0        10.0            8.0           11.0\n",
+       "4          66        8.0        9.0         9.0            6.0            9.0\n",
+       "..        ...        ...        ...         ...            ...            ...\n",
+       "82       2087        1.0        1.0         1.0            1.0            2.0\n",
+       "83       2463        5.0        5.0         5.0            4.0            6.0\n",
+       "84       2464        3.0        4.0         3.0            3.0            4.0\n",
+       "85       2686        1.0        1.0         1.0            1.0            2.0\n",
+       "86       3464        6.0        6.0         6.0            5.0            7.0\n",
+       "\n",
+       "[87 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_A_m"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
